(raf) Can now refresh the playlists from the Options screen.
(raf) Options can now be saved from options screen.
(raf) Some refactoring of options code/pspapp_network. Corrections on loglevels.
(raf) 0.37-pre3b: Corrected the WIFI:AUTOSTARTing.
(raf) 0.37-pre3c: Now you can save and restore USB autostart / wifi autostart / intial screen from the options screen

0.37-pre2
(raf) Corrected issue where SHOUTcast screen wasn't allocating memory for the lists, reusing the playlists' memory. This was causing instability in version 0.37-pre1.
(raf) Added a genre processing/parsing stage for shoutcast.com database.
(raf) Changed the text ui layout a bit, so that the stream name has more room

0.37-pre1 (r535)
(jpfouch48) Added scrolling text to metadata area. (Currently double buffering
is not working so it may look alittle choppy)
(sandberg) Added a radial blur effect as a background effect on the 3D UI.
(raf) Added code to draw font with outline - thanks to Halfast for the idea.
(raf) Revamped code to handle playlists in memory. 
(raf) Now shoutcast.com entries are sorted by genre
(raf) Now will reload shoutcast.com db on download. Also now include a default db.xml

0.36-final (svn.berlios.de/svnroot/repos/pspradio/Releases/PSPRadio0.36/)
(raf) If AUTOSTART set to 1 in config file, App starts in Options screen, starts the network, then goes back to main screen.
(raf) Lots of cleanup / refactoring
(raf) Now downloads a compressed version of SHOUTcast.com's database instead. Thanks to echto again for providing the routines to do the zlib uncompression, and SHOUTcast.com db download URL service setup, etc!!
(sandberg) Added a particle system as a new background effect for the 3D UI.
(raf) Simplified wifi selection. One option to select profile or turn off.
(raf) Screens are classes now. If going back and forth between screens, they will retain their state.